@@ -1,3 +1,7 @@
+2005-02-03  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* AST.xs: Fix Channel and XmlChan source functions. Sometimes the source
+	function is triggered after object constructor.
 
 2004-12-29  Tim Jenness  <timj@jach.hawaii.edu>
 
